--- a/rel/env.sh.eex
+++ b/rel/env.sh.eex
@@ -13,5 +13,6 @@
 
 # Set the release to work across nodes.
 # RELEASE_DISTRIBUTION must be "sname" (local), "name" (distributed) or "none".
-export RELEASE_DISTRIBUTION=sname
+export RELEASE_DISTRIBUTION=name
 export RELEASE_NODE=<%= @release.name %>
+export ERL_DIST_PORT=8001
